data/issues_nolabel/nolabel_test_3537.txt
Cannot build a simple C++ TensorFlow example for Android x86

Operating System: Ubuntu 14.04 LTS 64bit
Installed:
Android NDK (r12b),
Android SDK (Latest),
Tensorflow (0.9) (configured for CPU only),
Bazel (0.3.0)
I faced the same problem of the issue #2753, then I changed to use "//tensorflow/core:android_tensorflow_lib", now the error is:
external/eigen_archive/eigen-eigen-d02e6a705c30/unsupported/Eigen/CXX11/../../../Eigen/src/Core/arch/CUDA/TypeCasting.h: In function 'TgtPacket Eigen::internal::pcast(const SrcPacket&) [with SrcPacket = Eigen::internal::Packet4h; TgtPacket = __vector(4) float]':
external/eigen_archive/eigen-eigen-d02e6a705c30/unsupported/Eigen/CXX11/../../../Eigen/src/Core/arch/CUDA/TypeCasting.h:143:38: error: '_mm_cvtm64_si64' was not declared in this scope
   __int64_t a64 = _mm_cvtm64_si64(a.x);
                                      ^
Target //tensorflow/mydemo:mydemo failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 174.487s, Critical Path: 168.61s

I'm building with the following command:
bazel build :mydemo --crosstool_top=//external:android/crosstool --cpu=x86 --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
And with the following BUILD file:
cc_binary(
    name = "mydemo",
    srcs = ["mydemo.cc"],
    deps = [
        "//tensorflow/core:android_tensorflow_lib",
    ]
)

My WORKSPACE configuration:
android_sdk_repository(
    name = "androidsdk",
    api_level = 22,
    build_tools_version = "24.0.1",
    path = "/myandroid/sdk",
)

android_ndk_repository(
    name="androidndk",
    path="/myandroid/android-ndk-r12b",
    api_level=22)

I'm just trying to build a very simple C++ TensorFlow example for Android x86.